<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="@drawable/rounded_background"
    android:layout_margin="6dp">

    <TextView
        android:id="@+id/tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/tvHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"/>

    <ImageView
        android:id="@+id/imgWeatherIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_sunny"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

</LinearLayout>
