<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    android:background="@color/white"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/gradient_background"
        android:id="@+id/XmlWeatherListCard"
        android:gravity="center_vertical">

        <!-- שם העיר + המדינה בצד ימין | אייקון מזג האוויר בצד שמאל -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- אייקון מזג האוויר בצד שמאל -->


            <TextView
                android:id="@+id/tvCityAndCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/label_city"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="start"
                android:textDirection="locale"/>



            <!-- שם העיר והמדינה בצד ימין -->
            <ImageView
                android:id="@+id/ivWeatherIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:contentDescription="@string/weather_icon_desc"
                android:src="@drawable/ic_sunny" />


        </LinearLayout>

        <!-- טמפרטורה ראשית -->
        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_n_a"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"/>

        <!-- תיאור מזג האוויר -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_description_n_a"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"/>


        <!-- קו מפריד -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bright_blue"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/tvFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_feels_like"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"/>


        <!-- קו מפריד -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bright_blue"
            android:layout_marginVertical="8dp"/>
        <!-- קו מפריד -->



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMinTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_temp_min"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvMaxTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_temp_max"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- קו מפריד -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bright_blue"
            android:layout_marginVertical="8dp"/>
        <!-- קו מפריד -->




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sunrise"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sunset"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- קו מפריד נוסף -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bright_blue"
            android:layout_marginVertical="8dp"/>

        <!-- קו מפריד נוסף -->





        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_humidity"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_wind"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- קו מפריד נוסף -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bright_blue"
            android:layout_marginVertical="8dp"/>
        <!-- קו מפריד נוסף -->


        <EditText
        android:id="@+id/etUserNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_note"
        android:textSize="14sp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:gravity="start"
        android:visibility="visible"
        android:textColorHint="@color/dark_grey"
        android:enabled="false"/>
        <!-- קו מפריד נוסף -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bright_blue"
            android:layout_marginVertical="8dp"/>
        <!-- קו מפריד נוסף -->

        <!-- סרגל הכלים -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="4dp">

            <!-- כפתור עריכה -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btnEditNote"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_edit"
                    android:padding="4dp"
                    app:tint="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- כפתור שמירה -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btnSaveNote"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_save"
                    android:padding="4dp"
                    app:tint="@color/black"
                    android:visibility="visible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- כפתור מחיקה -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivDeleteFavorite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_delete"
                    android:padding="4dp"
                    app:tint="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>



            <!-- כפתור עוד -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btnDetails"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_more"
                    android:padding="4dp"
                    app:tint="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>