<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_weather_gradient"
        >

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/black">

            <ImageView
                android:id="@+id/btnHome"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/home"
                android:src="@drawable/ic_home"
                android:scaleType="fitCenter"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_list_title"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btnSortTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_temperature"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/btnSortCityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_city_name"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFavorites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"/>

    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>